--- a/.github/workflows/go-presubmit.yml
+++ b/.github/workflows/go-presubmit.yml
@@ -25,5 +25,5 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
-        cache: true
+        cache: false  # we have no dependencies
     - uses: creachadair/go-presubmit-action@v1
